[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/counters/StandardCounter.tscn" type="PackedScene" id=1]
[ext_resource path="res://resources/theme.tres" type="Theme" id=2]
[ext_resource path="res://resources/sprites/backgrounds/9patch_scroll1_med.png" type="Texture" id=3]
[ext_resource path="res://resources/h2_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://resources/h1_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://scenes/info_elements/WeaponCard.gd" type="Script" id=6]


[sub_resource type="DynamicFontData" id=1]
font_path = "res://resources/fonts/Nefthypos-Regular-Complete.ttf"

[sub_resource type="DynamicFont" id=2]
size = 20
outline_color = Color( 0.137255, 0, 0, 1 )
use_filter = true
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 21
use_filter = true
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 18
outline_color = Color( 0.137255, 0, 0, 1 )
use_filter = true
font_data = SubResource( 1 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="DynamicFontData" id=8]
font_path = "res://resources/fonts/Nefthypos-Regular-Complete.ttf"

[sub_resource type="DynamicFont" id=9]
size = 20
use_filter = true
font_data = SubResource( 8 )

[node name="WeaponCard" type="NinePatchRect"]
margin_right = 350.0
margin_bottom = 300.0
rect_min_size = Vector2( 350, 450 )
theme = ExtResource( 2 )
texture = ExtResource( 3 )
patch_margin_left = 32
patch_margin_top = 35
patch_margin_right = 26
patch_margin_bottom = 31
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 30.0
margin_top = 34.0
margin_right = 320.0
margin_bottom = 415.0

[node name="Name" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 290.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 5 )
text = "Porra de seguridad"
align = 1

[node name="ArsGroup" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 33.0
margin_right = 290.0
margin_bottom = 59.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeaponClass" type="Label" parent="CenterContainer/VBoxContainer/ArsGroup"]
margin_left = 57.0
margin_right = 112.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 4 )
text = "Porra"

[node name="Proficiency" parent="CenterContainer/VBoxContainer/ArsGroup" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 116.0
margin_right = 232.0
margin_bottom = 26.0

[node name="HSeparator" type="HSeparator" parent="CenterContainer/VBoxContainer"]
margin_top = 63.0
margin_right = 290.0
margin_bottom = 73.0
custom_constants/separation = 10

[node name="DamageType" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 77.0
margin_right = 290.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 2 )
text = "Contundente"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 99.0
margin_right = 290.0
margin_bottom = 141.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_left = 21.0
margin_right = 269.0
margin_bottom = 42.0
custom_constants/hseparation = 10
columns = 4

[node name="IsRangedL" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer/GridContainer"]
margin_right = 79.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.25098, 0.25098, 0.25098, 1 )
text = "Alcance:"
align = 2

[node name="IsRanged" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer/GridContainer"]
margin_left = 89.0
margin_top = 1.0
margin_right = 124.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 4 )
text = "Melee"

[node name="RangeL" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer/GridContainer"]
margin_left = 134.0
margin_right = 203.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.25098, 0.25098, 0.25098, 1 )
text = "Rango:"
align = 2

[node name="Range" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer/GridContainer"]
margin_left = 213.0
margin_top = 1.0
margin_right = 248.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 4 )
text = "medio"

[node name="BaseDamageL" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer/GridContainer"]
margin_top = 23.0
margin_right = 79.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.25098, 0.25098, 0.25098, 1 )
text = "Daño Base:"
align = 2

[node name="BaseDamage" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer/GridContainer"]
margin_left = 89.0
margin_top = 24.0
margin_right = 124.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 4 )
text = "2.5"

[node name="IncrementDamageL" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer/GridContainer"]
margin_left = 134.0
margin_top = 23.0
margin_right = 203.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.25098, 0.25098, 0.25098, 1 )
text = "Daño inc.:"
align = 2

[node name="IncrementDamage" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer/GridContainer"]
margin_left = 213.0
margin_top = 24.0
margin_right = 248.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 4 )
text = "0.5"

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/VBoxContainer"]
margin_top = 145.0
margin_right = 290.0
margin_bottom = 149.0

[node name="HSeparator3" type="HSeparator" parent="CenterContainer/VBoxContainer"]
margin_top = 153.0
margin_right = 290.0
margin_bottom = 173.0
custom_styles/separator = SubResource( 5 )
custom_constants/separation = 20

[node name="Description" type="TextEdit" parent="CenterContainer/VBoxContainer"]
margin_top = 177.0
margin_right = 290.0
margin_bottom = 337.0
rect_min_size = Vector2( 290, 160 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_vertical = 3
custom_styles/read_only = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 9 )
text = "Arma contundente pendada para controlar disturbios. Usada habitalmente por guardia de seguridad.
"
readonly = true
wrap_enabled = true

[node name="HSeparator4" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 341.0
margin_right = 290.0
margin_bottom = 381.0
rect_min_size = Vector2( 0, 40 )

[node name="AmmoContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HSeparator4"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AmmoL" type="Label" parent="CenterContainer/VBoxContainer/HSeparator4/AmmoContainer"]
margin_right = 290.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 4 )
text = "Munición"
align = 2

[node name="Ammo" type="Label" parent="CenterContainer/VBoxContainer/HSeparator4/AmmoContainer"]
margin_top = 20.0
margin_right = 290.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 4 )
text = "-"
align = 2
